turtleart.square.Square.scala.error
Erreur de compilation :
Square:2: error: not found: value square
  square(200)
  ^