turtleart.square.Square.scala.code
override def run() {
  square(200)
}